Add a validator subclass specialized for validating WML schemas against the WML schema schema

--- a/data/schema/ai/aspect_complex.cfg
+++ b/data/schema/ai/aspect_complex.cfg
@@ -238,7 +238,7 @@
 	{SIMPLE_KEY begin s_real}
 	{SIMPLE_KEY end s_real}
 	{SIMPLE_KEY spend_all_gold s_int}
-	{SIMPLE_KEY save_on_negative_income sbool}
+	{SIMPLE_KEY save_on_negative_income s_bool}
 )}
 
 {AI_FACET_TAG recruitment_instructions (
