--- a/data/schema/ai/modify.cfg
+++ b/data/schema/ai/modify.cfg
@@ -164,10 +164,10 @@
 		{AI_MODIFY_MATCH_ASPECT villages_per_scout int}
 		{AI_MODIFY_MATCH_ASPECT attack_depth int}
 		{AI_MODIFY_MATCH_ASPECT recruitment_randomness int}
-		{AI_MODIFY_MATCH_ASPECT grouping ai_grouping}
-		{AI_MODIFY_MATCH_ASPECT advancements string_list}
-		{AI_MODIFY_MATCH_ASPECT recruitment_more string_list}
-		{AI_MODIFY_MATCH_ASPECT recruitment_pattern string_list}
+		{AI_MODIFY_MATCH_ASPECT grouping grouping}
+		{AI_MODIFY_MATCH_ASPECT advancements string}
+		{AI_MODIFY_MATCH_ASPECT recruitment_more string}
+		{AI_MODIFY_MATCH_ASPECT recruitment_pattern string}
 		{AI_MODIFY_MATCH_ASPECT avoid avoid}
 		{AI_MODIFY_MATCH_ASPECT leader_goal leader_goal}
 		{AI_MODIFY_MATCH_ASPECT recruitment_instructions recruitment_instructions}
