--- a/data/schema/core/addons.cfg
+++ b/data/schema/core/addons.cfg
@@ -72,8 +72,8 @@
 	[tag]
 		name="fog_override"
 		max=infinite
-		{SIMPLE_KEY x int_list}
-		{SIMPLE_KEY y int_list}
+		{SIMPLE_KEY x range_list}
+		{SIMPLE_KEY y range_list}
 	[/tag]
 	[tag]
 		name="ai"
@@ -289,7 +289,7 @@
 	{SIMPLE_KEY map_data map_data}
 	{DEFAULT_KEY turns turns unlimited}
 	{DEFAULT_KEY turn_at int 1}
-	{DEFAULT_KEY random_start_time bool,int_list no} # Note: Is it random_start_time or random_starting_time? (There's some uses of the latter)
+	{DEFAULT_KEY random_start_time bool,int_list no}
 	{DEPRECATED_KEY music string}
 	{SIMPLE_KEY defeat_music string}
 	{SIMPLE_KEY victory_music string}
