--- a/data/schema/core/conditionalwml.cfg
+++ b/data/schema/core/conditionalwml.cfg
@@ -47,7 +47,7 @@
 	{LINK_TAG "lua"}
 	[tag]
 		name="and,or,not"
-		super="$condition_wml"
+		super="$conditional_wml"
 	[/tag]
 	any_tag=yes
 [/tag]
