--- a/data/schema/editor/groups.cfg
+++ b/data/schema/editor/groups.cfg
@@ -1,7 +1,7 @@
 
 [tag]
 	name="editor_group"
-	max=unlimited
+	max=infinite
 	{REQUIRED_KEY id string}
 	{SIMPLE_KEY name t_string}
 	{SIMPLE_KEY icon t_string}
@@ -10,11 +10,11 @@
 
 [tag]
 	name="item_group"
-	max=unlimited
+	max=infinite
 	super="editor_group"
 	[tag]
 		name="item"
-		max=unlimited
+		max=infinite
 		super="scenario/item"
 		{REQUIRED_KEY id string}
 		{SIMPLE_KEY name t_string}
