--- a/data/schema/game_config.cfg
+++ b/data/schema/game_config.cfg
@@ -91,6 +91,14 @@
         [/list]
     [/type]
     [type]
+        name=int_list
+        [list]
+            [element]
+                link=unsigned
+            [/element]
+        [/list]
+    [/type]
+    [type]
         name=prog_string
         value=".*"
     [/type]
