--- a/data/schema/types/basic.cfg
+++ b/data/schema/types/basic.cfg
@@ -40,7 +40,13 @@
 
 [type]
 	name=color
-	value="(?:2[0-5][0-5]|[01]?\d?\d)[.,]\s*(?:2[0-5][0-5]|[01]?\d?\d)[.,]\s*(?:2[0-5][0-5]|[01]?\d?\d)[.,]\s*(?:2[0-5][0-5]|[01]?\d?\d)"
+	[list]
+		min=3
+		max=4
+		[element]
+			value="(?:2[0-5][0-5]|[01]?\d?\d)\s*"
+		[/element]
+	[/list]
 [/type]
 
 [type]
