--- a/data/schema/units/single.cfg
+++ b/data/schema/units/single.cfg
@@ -31,7 +31,7 @@
 	{SIMPLE_KEY advances_to string_list}
 	{SIMPLE_KEY race string}
 	{SIMPLE_KEY undead_variation string}
-	{SIMPLE_KEY usage usage}
+	{SIMPLE_KEY usage ai_usage}
 	{SIMPLE_KEY zoc s_bool}
 	{SIMPLE_KEY ellipse string}
 	{DEPRECATED_KEY ai_special string} # Not documented
