--- a/data/campaigns/Eastern_Invasion/scenarios/02_The_Escape_Tunnel.cfg
+++ b/data/campaigns/Eastern_Invasion/scenarios/02_The_Escape_Tunnel.cfg
@@ -45,6 +45,7 @@
         id=Kabak
         name= _ "Kabak"
         canrecruit=yes
+        hidden=yes
 
         [ai]
             aggression=1.0
@@ -198,7 +199,26 @@
             message= _ "I will explain later. For now, suffice to say they are much too powerful for us; our only hope is to head north."
         [/message]
     [/event]
-
+    
+    # Find the trolls
+    [event]    
+        name=sighted
+        
+        {VARIABLE monsters yes}
+        
+        [filter]
+            side=2
+        [/filter]
+        [filter_second]
+            side=1
+        [/filter_second]
+               
+        [modify_side]
+            side=2
+            hidden=no
+        [/modify_side]
+    [/event]
+    
     [event]
         name=moveto
         [filter]
@@ -229,12 +249,22 @@
             speaker=unit
             message= _ "Who goes there?"
         [/message]
-
-        [message]
-            speaker=Gweddry
-            message= _ "We are soldiers of the king of Wesnoth. Will you help us fight these trolls?"
-            #TODO: Gweddry should say something else if we haven't sighted any troll yet
-        [/message]
+        
+        [if]
+            {VARIABLE_CONDITIONAL monsters boolean_equals yes}
+            [then]
+                [message]
+                speaker=Gweddry
+                message= _ "We are soldiers of the king of Wesnoth. Will you help us fight these trolls?"
+                [/message]
+            [/then]
+            [else]
+                [message]
+                speaker=Gweddry
+                message= _ "We are soldiers of the king of Wesnoth. We know trolls dwell in these caves. Will you help us fight them?"
+                [/message]
+            [/else]
+        [/if]
 
         [message]
             speaker=unit
