EI S02: Dialogue improvement
Implemented long-standing TODO. The trolls are now hidden until sighted by the player. When interacting with the dwarfs, Gweddry will now respond according to whether the trolls have been sighted or not.

Closes #3689

--- a/data/campaigns/Eastern_Invasion/scenarios/02_The_Escape_Tunnel.cfg
+++ b/data/campaigns/Eastern_Invasion/scenarios/02_The_Escape_Tunnel.cfg
@@ -45,6 +45,7 @@
         id=Kabak
         name= _ "Kabak"
         canrecruit=yes
+        hidden=yes
 
         [ai]
             aggression=1.0
@@ -178,6 +179,9 @@
     [event]
         name=start
 
+        {VARIABLE undead no}
+        {VARIABLE monsters no}
+
         [message]
             speaker=Gweddry
             message= _ "Where are we? I can’t see where we are going."
@@ -197,6 +201,25 @@
             speaker=Dacyn
             message= _ "I will explain later. For now, suffice to say they are much too powerful for us; our only hope is to head north."
         [/message]
+    [/event]
+
+    # Find the trolls
+    [event]
+        name=sighted
+
+        {VARIABLE monsters yes}
+
+        [filter]
+            side=2
+        [/filter]
+        [filter_second]
+            side=1
+        [/filter_second]
+
+        [modify_side]
+            side=2
+            hidden=no
+        [/modify_side]
     [/event]
 
     [event]
@@ -230,11 +253,21 @@
             message= _ "Who goes there?"
         [/message]
 
-        [message]
-            speaker=Gweddry
-            message= _ "We are soldiers of the king of Wesnoth. Will you help us fight these trolls?"
-            #TODO: Gweddry should say something else if we haven't sighted any troll yet
-        [/message]
+        [if]
+            {VARIABLE_CONDITIONAL monsters boolean_equals yes}
+            [then]
+                [message]
+                speaker=Gweddry
+                message= _ "We are soldiers of the king of Wesnoth. Will you help us fight these trolls?"
+                [/message]
+            [/then]
+            [else]
+                [message]
+                speaker=Gweddry
+                message= _ "We are soldiers of the king of Wesnoth. We know trolls dwell in these caves. Will you help us fight them?"
+                [/message]
+            [/else]
+        [/if]
 
         [message]
             speaker=unit
@@ -390,6 +423,7 @@
         [/message]
 
         {CLEAR_VARIABLE undead}
+        {CLEAR_VARIABLE monsters}
 
         [endlevel]
             result=victory
