TSG S6b: modified enemy spawns

--- a/data/campaigns/The_South_Guard/scenarios/06b_The_Long_March.cfg
+++ b/data/campaigns/The_South_Guard/scenarios/06b_The_Long_March.cfg
@@ -346,7 +346,7 @@ _f, _f, Re, _f
 
         # This places a bunch of lvl1 elves along the secret path, the player
         # will probably bump into all of these.
-        {SCATTER_UNITS $num_of_ambushers "Elvish Fighter,Elvish Archer,Elvish Shaman,Elvish Scout,Elvish Fighter" 3 (
+        {SCATTER_UNITS $num_of_ambushers "Elvish Fighter,Elvish Archer,Elvish Scout,Elvish Fighter" 3 (
             terrain=*^F*
             x=3-34
             y=13-31
@@ -406,7 +406,7 @@ _f, _f, Re, _f
         # player will mostly only bump into these if he wanders away from the
         # path, although a few might occasionally be close enough to join an
         # ambush by the lvl1 elves next to the path.
-        {SCATTER_UNITS 30 "Elvish Hero,Elvish Captain,Elvish Druid" 2 (
+        {SCATTER_UNITS 30 "Elvish Hero,Elvish Captain,Elvish Ranger" 2 (
             terrain=*^F*
             x=3-34
             y=13-31
