TSG S7a: gameplay update

--- a/data/campaigns/The_South_Guard/scenarios/07a_Into_the_Depths.cfg
+++ b/data/campaigns/The_South_Guard/scenarios/07a_Into_the_Depths.cfg
@@ -5,12 +5,14 @@
     name= _ "Into the Depths"
     next_scenario=08a_Return_to_Kerlath
 
-    {SCENARIO_MUSIC the_deep_path.ogg}
+    {SCENARIO_MUSIC the_dangerous_symphony.ogg}
+    {EXTRA_SCENARIO_MUSIC into_the_shadows.ogg}
     {EXTRA_SCENARIO_MUSIC knalgan_theme.ogg}
+    {EXTRA_SCENARIO_MUSIC underground.ogg}
 
     map_data="{campaigns/The_South_Guard/maps/07a_Into_the_Depths.map}"
 
-#define SG_DEATHS_HYLAS_LATE
+#define SG_DEATHS_LAST_LEVEL
 #enddef
     {campaigns/The_South_Guard/utils/sg_deaths.cfg}
 
@@ -737,6 +739,10 @@
             speaker="Mal M'Brin"
             message= _ "You? Destroy me? Your flesh will provide a fine feast for my ghouls, and once they are through with you, you will serve me forever in undeath!"
         [/message]
+
+        {REPLACE_SCENARIO_MUSIC vengeful.ogg}
+        {APPEND_MUSIC frantic.ogg}
+        {APPEND_MUSIC northerners.ogg}
 
         [gold]
             side=2
