TSG modified hero deaths

--- a/data/campaigns/The_South_Guard/utils/sg_deaths.cfg
+++ b/data/campaigns/The_South_Guard/utils/sg_deaths.cfg
@@ -49,7 +49,6 @@
     [/if]
 [/event]
 
-#ifndef SG_DEATHS_LAST_LEVEL
 [event]
     name=last breath
     [filter]
@@ -63,7 +62,6 @@
         result=defeat
     [/endlevel]
 [/event]
-#endif
 
 [event]
     name=last breath
@@ -72,7 +70,7 @@
     [/filter]
     [message]
         speaker=unit
-        message= _ "I have given my all for my kingdom! Avenge me, Deoran!"
+        message= _ "I have given all for my kingdom! Avenge me, Deoran!"
     [/message]
 #ifndef SG_DEATHS_LAST_LEVEL
     [endlevel]
@@ -106,7 +104,7 @@
 #ifndef SG_DEATHS_JAREK_ALTERNATIVE
     [message]
         speaker=unit
-        message= _ "Far from home I fall — but not in vain! Guard our people, Deoran!"
+        message= _ "Far from home I fall — but not in vain! Defend our people, Deoran!"
     [/message]
 #else
     [message]
