TSG modified hero deaths

--- a/data/campaigns/The_South_Guard/utils/sg_deaths.cfg
+++ b/data/campaigns/The_South_Guard/utils/sg_deaths.cfg
@@ -56,7 +56,7 @@
     [/filter]
     [message]
         speaker=unit
-        message= _ "I have lost all helping the humans... Now they will surely perish!"
+        message= _ "I have lost everything helping the humans... Now they will surely perish!"
     [/message]
     [endlevel]
         result=defeat
