TSG S7b: code style modifications

--- a/data/campaigns/The_South_Guard/scenarios/07b_Pebbles_in_the_Flood.cfg
+++ b/data/campaigns/The_South_Guard/scenarios/07b_Pebbles_in_the_Flood.cfg
@@ -419,9 +419,7 @@
 
         [kill]
             side=1
-            [not]
-                x,y=recall,recall
-            [/not]
+            {NOT_ON_RECALL_LIST}
             fire_event=no
             animate=no
         [/kill]
@@ -444,15 +442,7 @@
         # In case that matters if played as MP Campaign, make him vulnerable again
         [modify_unit]
             [filter]
-                id="Mal M'Brin"
-            [/filter]
-            [status]
-                invulnerable=no
-            [/status]
-        [/modify_unit]
-        [modify_unit]
-            [filter]
-                id="Mal Tera"
+                id="Mal M'Brin","Mal Tera"
             [/filter]
             [status]
                 invulnerable=no
