TSG S8b: fixed po translation note

--- a/data/campaigns/The_South_Guard/scenarios/08b_The_Tides_of_War.cfg
+++ b/data/campaigns/The_South_Guard/scenarios/08b_The_Tides_of_War.cfg
@@ -540,8 +540,7 @@
     [event]
         name=side 2 turn 1
 
-        # po: fleshbag refers to humans, meaning literally a "chunk of meat" here
-        # po: "pesky fly" refers to Sir Gerrick
+        # po: fleshbag refers to humans, meaning literally a "chunk of meat" here, and "pesky fly" refers to Sir Gerrick
         [message]
             speaker="Mal M'Brin"
             message= _ "So, the fleshbags have managed to mount a defense. It would seem that the pesky fly turned out to be more than a minor annoyance after all."
