--- a/data/campaigns/Eastern_Invasion/scenarios/02_The_Escape_Tunnel.cfg
+++ b/data/campaigns/Eastern_Invasion/scenarios/02_The_Escape_Tunnel.cfg
@@ -46,6 +46,8 @@
         name= _ "Kabak"
         canrecruit=yes
         hidden=yes
+        
+        {VARIABLE monsters no}
 
         [ai]
             aggression=1.0
@@ -102,6 +104,8 @@
 
         no_leader=yes
         hidden=yes
+        
+        {VARIABLE undead no}
 
         village_gold=3
         village_support=2
@@ -420,6 +424,7 @@
         [/message]
 
         {CLEAR_VARIABLE undead}
+        {CLEAR_VARIABLE monsters}
 
         [endlevel]
             result=victory
