TSG S8a: added time over event

--- a/data/campaigns/The_South_Guard/scenarios/08a_Return_to_Kerlath.cfg
+++ b/data/campaigns/The_South_Guard/scenarios/08a_Return_to_Kerlath.cfg
@@ -329,6 +329,51 @@
     [/event]
 
     [event]
+        name=time over
+
+        [remove_shroud]
+            [filter_side]
+                side=1
+            [/filter_side]
+            x=10-18
+            y=0-5
+        [/remove_shroud]
+        [lift_fog]
+            [filter_side]
+                side=1
+            [/filter_side]
+            x=10-18
+            y=0-5
+            multiturn=yes
+        [/lift_fog]
+        [redraw]
+            side=1
+            clear_shroud=yes
+        [/redraw]
+
+        [unit]
+            type=Elvish Avenger
+            side=2
+            id=Eltenmir
+            name= _ "Eltenmir"
+            animate=yes
+            x,y=13,2
+        [/unit]
+        {GENERIC_UNIT 2 (Elvish Hero) 12 1}
+        {GENERIC_UNIT 2 (Elvish Captain) 12 2}
+        {GENERIC_UNIT 2 (Elvish Marksman) 11 3}
+
+        [message]
+            speaker=Eltenmir
+            message= _ "These human beasts slew our people and murdered Mebrin! We must have vengeance for this vile atrocity. Burn their city to the ground!"
+        [/message]
+        [message]
+            speaker=Deoran
+            message= _ "The elves are attacking Westin! They'll surely destroy the city without us there to defend it..."
+        [/message]
+    [/event]
+
+    [event]
         name=moveto
         [filter]
             side=1
