TSG bigmap: modified S8a/S9a

--- a/data/campaigns/The_South_Guard/utils/bigmap.cfg
+++ b/data/campaigns/The_South_Guard/utils/bigmap.cfg
@@ -332,7 +332,13 @@
     {JOURNEY 596 649}
     {JOURNEY 602 635}
     {JOURNEY 609 621}
-    {NEW_BATTLE 618 609}
+    {JOURNEY 618 609}
+    {JOURNEY 626 594}
+    {JOURNEY 630 578}
+    {JOURNEY 632 561}
+    {JOURNEY 635 544}
+    {JOURNEY 637 527}
+    {NEW_BATTLE 640 510}
 #enddef
 
 #define JOURNEY_08A_OLD
@@ -352,7 +358,13 @@
     {OLD_JOURNEY 596 649}
     {OLD_JOURNEY 602 635}
     {OLD_JOURNEY 609 621}
-    {OLD_BATTLE 618 609}
+    {OLD_JOURNEY 618 609}
+    {OLD_JOURNEY 626 594}
+    {OLD_JOURNEY 630 578}
+    {OLD_JOURNEY 632 561}
+    {OLD_JOURNEY 635 544}
+    {OLD_JOURNEY 637 527}
+    {OLD_BATTLE 640 510}
 #enddef
 
 #define JOURNEY_08B_NEW
@@ -379,12 +391,6 @@
 
 #define JOURNEY_09A_NEW
     {JOURNEY_08A_OLD}
-    {JOURNEY 626 594}
-    {JOURNEY 630 578}
-    {JOURNEY 632 561}
-    {JOURNEY 635 544}
-    {JOURNEY 637 527}
-    {JOURNEY 640 510}
     {JOURNEY 643 493}
     {JOURNEY 647 478}
     {JOURNEY 649 463}
