--- a/data/campaigns/The_South_Guard/utils/sg_help.cfg
+++ b/data/campaigns/The_South_Guard/utils/sg_help.cfg
@@ -26,7 +26,7 @@
             [message]
                 speaker=narrator
                 image="units/human-outlaws/thug-melee-3.png~RC(magenta>red)"
-                message= _ "Thugs are the mainstay of the bandit armies. They do not have a <i>ranged</i> attack, and are vulnerable to your archers. Deoran’s lance will also strike fear into their hearts! Like all of the bandit units, they are much more dangerous at night."
+                message= _ "Thugs are the mainstay of the bandit armies. They are powerful in melee combat, but do not have a <i>ranged</i> attack and are vulnerable to archers. Like all bandit units, they are much more dangerous at night."
             [/message]
         [/then]
     [/if]
@@ -53,7 +53,7 @@
             [message]
                 speaker=narrator
                 image="units/human-outlaws/thief-defend-2-2.png~RC(magenta>red)"
-                message= _ "Thieves are more subtle than thugs. They try to surround your units and stab them in the back. Make sure that thieves never have an opportunity to attack when they have an ally directly behind the unit they are attacking — they’ll do double damage! Like thugs, thieves are vulnerable to the ranged attacks of your archers."
+                message= _ "Thieves are weak in one-on-one combat, but can be deadly if you allow them to surround your units. On offense, thieves will deal double damage when they have an ally directly behind the unit they are attacking! Like thugs, thieves are vulnerable to ranged attacks."
             [/message]
         [/then]
     [/if]
@@ -80,7 +80,7 @@
             [message]
                 speaker=narrator
                 image="units/human-outlaws/footpad+female-attack1.png~RC(magenta>red)"
-                message= _ "Footpads are the scouts of the bandit armies. They are quick, and have both a <i>melee</i> attack and a <i>ranged</i> attack. Neither of their attacks is very strong, however, and your spearmen will make quick work of them during the day."
+                message= _ "Footpads are the scouts of the bandit armies. They are highly mobile, and have both a <i>melee</i> attack and a <i>ranged</i> attack, although neither of their attacks is very strong. Footpads are difficult to hit with regular attacks, but will take bonus damage from bladed, impact, or piercing weapons and can be easily killed during the day."
             [/message]
         [/then]
     [/if]
@@ -107,7 +107,7 @@
             [message]
                 speaker=narrator
                 image="units/undead-skeletal/skeleton/skeleton-se-melee2.png~RC(magenta>red)"
-                message= _ "Skeletons are the bones of fallen warriors raised by some dark magic. They are almost immune to piercing weapons like arrows and spears. Bladed attacks like swords will injure them, and Minister Hylas’s <i>arcane</i> attack is deadly against them. Like the rest of the bandits, they are more dangerous at night!"
+                message= _ "Skeletons are the bones of fallen warriors reanimated by dark sorcery. They are almost immune to piercing weapons like arrows and spears, but can be harmed by bladed attacks like swords, and are especially vulnerable to impact weapons. Minister Hylas’s <i>arcane</i> attack is extremely effective against them. Like bandits, they are much more dangerous at night!"
             [/message]
         [/then]
     [/if]
@@ -134,7 +134,7 @@
             [message]
                 speaker=narrator
                 image="units/undead/zombie-attack-s.png~RC(magenta>red)"
-                message= _ "Walking corpses are the bodies of slain warriors, filled with some black magic. They are slow and weak — any of your units is more than a match for them. They are only dangerous in packs..."
+                message= _ "Walking corpses are usually used by weaker practicioners of the black arts, who pilfer dead bodies to practice their profane magic. Alone, they are slow and weak, although they can become dangerous in large groups. Any unit slain by a Walking Corpse will be plagued with undeath and become one as well."
             [/message]
         [/then]
     [/if]
