NR S7a: debug mode safety

--- a/data/campaigns/Northern_Rebirth/scenarios/07a_Settling_Disputes.cfg
+++ b/data/campaigns/Northern_Rebirth/scenarios/07a_Settling_Disputes.cfg
@@ -627,7 +627,7 @@
             [filter]
                 id=Ro'Sothian
             [/filter]
-            kill=no
+            kill=yes
             variable=rosothian
         [/store_unit]
         {PLACE_IMAGE "units/undead-necromancers/lich.png~RC(magenta>green)~BLIT(items/cage.png)" 25 6}
@@ -670,7 +670,7 @@
                 moves=full
                 restore_attacks=yes
             [/heal_unit]
-            {CLEAR_VARIABLE rosothian,heal_amount}
+            {CLEAR_VARIABLE rosothian}
 
             [message]
                 speaker="Ro'Sothian"
@@ -838,7 +838,7 @@
                     moves=full
                     restore_attacks=yes
                 [/heal_unit]
-                {CLEAR_VARIABLE rosothian,heal_amount}
+                {CLEAR_VARIABLE rosothian}
             [/then]
         [/if]
 
@@ -936,6 +936,22 @@
 
     [event]
         name=victory
+
+        # Only for debug mode, in normal play the unit would have been unstored in the previous event
+        [if]
+            [not]
+                [have_unit]
+                    id=Ro'Sothian
+                [/have_unit]
+            [/not]
+            [then]
+                [unstore_unit]
+                    variable=rosothian
+                    x,y=recall,recall
+                [/unstore_unit]
+                {CLEAR_VARIABLE rosothian}
+            [/then]
+        [/if]
 
         # This complex code is used instead of [modify_unit] because it
         # - allows to add the loyal trait at first place in the trait list
