TSG S7b: adjusted enemy income

--- a/data/campaigns/The_South_Guard/scenarios/07b_Pebbles_in_the_Flood.cfg
+++ b/data/campaigns/The_South_Guard/scenarios/07b_Pebbles_in_the_Flood.cfg
@@ -352,27 +352,43 @@
 #endif
         [/gold]
     [/event]
+    
     [event]
-        name=die
-        first_time_only=no
-
-        [filter]
-            side=2,3
-        [/filter]
-        [gold]
-            side=2,3
-#ifdef EASY
-            amount=3
-#endif
-#ifdef NORMAL
-            amount=5
-#endif
-#ifdef HARD
-            amount=7
-#endif
-        [/gold]
+        name=turn 6
+        
+        [modify_side]
+            side=2
+            {INCOME 20 25 30}
+        [/modify_side]
+        [modify_side]
+            side=3
+            {INCOME 15 20 25}
+        [/modify_side]
     [/event]
-
+    [event]
+        name=turn 12
+        
+        [modify_side]
+            side=2
+            {INCOME 25 30 35}
+        [/modify_side]
+        [modify_side]
+            side=3
+            {INCOME 20 25 30}
+        [/modify_side]
+    [/event]
+    [event]
+        name=turn 18
+        
+        [modify_side]
+            side=2
+            {INCOME 40 45 50}
+        [/modify_side]
+        [modify_side]
+            side=3
+            {INCOME 35 40 45}
+        [/modify_side]
+    [/event]
 
     [event]
         name=last breath
